# SimpleTextEditor

./: .clang-format  CMakeLists.txt  LICENSE  Main.cpp  README.md
.cache/clangd/index/: Main.cpp.33826263CB4640CD.idx
